[gd_scene load_steps=4 format=3 uid="uid://dc13ohpqa2b53"]

[ext_resource type="Script" uid="uid://bxamthh4jr33j" path="res://main.gd" id="1_ig7tw"]
[ext_resource type="Texture2D" uid="uid://cqkov105qw1qv" path="res://bg.png" id="2_0xm2m"]
[ext_resource type="Material" uid="uid://cymvljcraumsu" path="res://test.tres" id="2_h2yge"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_ig7tw")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1560.0
offset_bottom = 1440.0
texture = ExtResource("2_0xm2m")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 25.0
offset_top = 172.0
offset_right = 170.0
offset_bottom = 203.0
scale = Vector2(1.89779, 1.54684)

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="OpenButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_hover_pressed_color = Color(0.290187, 1, 0.926243, 1)
theme_override_colors/font_color = Color(0.901961, 0.886275, 0.745098, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
text = "Open"

[node name="New" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.901961, 0.886275, 0.745098, 1)
text = "New"

[node name="SaveButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.901961, 0.886275, 0.745098, 1)
theme_override_colors/font_pressed_color = Color(0.654402, 0.97815, 0.578546, 1)
text = "Save"

[node name="CloseButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.901961, 0.886275, 0.745098, 1)
text = "Close Tab"

[node name="SearchBar" type="LineEdit" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
placeholder_text = "                                                "
expand_to_text_length = true
clear_button_enabled = true

[node name="SearchNext" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.901961, 0.886275, 0.745098, 1)
text = "Search"

[node name="ToggleThemeButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "â˜¼"

[node name="TabContainer" type="TabContainer" parent="."]
modulate = Color(0.901961, 0.886275, 0.745098, 1)
self_modulate = Color(0.0120445, 0.00762255, 0.00184579, 1)
material = ExtResource("2_h2yge")
layout_mode = 0
offset_left = 20.0
offset_top = 261.0
offset_right = 60.0
offset_bottom = 301.0
clip_tabs = false
drag_to_rearrange_enabled = true
tab_focus_mode = 1

[node name="OpenDialog" type="FileDialog" parent="."]
title = "Open a File"
ok_button_text = "Open"
file_mode = 0
access = 2

[node name="SaveDialog" type="FileDialog" parent="."]
access = 2
